// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 ivoXAL"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 blgtWS"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-kkeaok-0 itduba"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 hoWNzn"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 blgtWS"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 hoWNzn"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 blgtWS"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledHint-tq1z5r-0 iSwvjy"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 ivoXAL"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 blgtWS"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-kkeaok-0 itduba"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 ctgbSF"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 fnOSex"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 hoRjnv"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
